--- a/PhysicsSimulations/InclinedPlane/index.html
+++ b/PhysicsSimulations/InclinedPlane/index.html
@@ -7,9 +7,9 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css" type="text/css">
 <style type="text/css">
-div#total { width: 650px; height: 400px; }
+div#total { width: 400px; height: 400px; }
 div#canvas { width: 400px; height: 400px; }
-div#panel { left: 400px; width: 250px; height: 400px; } 
+div#panel { top: 400px; width: 400px; height: 400px; } 
 .pos1 { left: 10px; }
 .pos2 { left: 140px; }
 .pos3 { left: 220px; }
