--- a/CodeNotesInteractive/app/src/main/assets/ConstantAcceleration/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/ConstantAcceleration/index.html
@@ -9,8 +9,8 @@
 <style type="text/css">
 div#total { width: 540px; height: 400px; }
 div#canvas { width: 540px; height: 400px; }
-div#panel { top: 400px; width: 540px; height: 110px; } 
-button { width: 220px; }
+div#panel { top: 420px; width: 540px; height: 110px; } 
+button { width: 240px; height: 80px; }
 input[type="text"] { left: 10px; width: 150px; }
 .pos1 { left: 10px; }
 .pos3 { left: 180px; }
@@ -28,7 +28,7 @@ input[type="text"] { left: 10px; width: 150px; }
   <div id="canvas"><canvas id="cv" width=540 height=400>This browser doesn't support HTML5 canvas!</canvas></div>
   <div id="panel">
     <div style="top: 10px; left:150px;"><button id="bu1" style="background-color: #00ffff;"></button></div>
-    <div style="top: 50px; left:150px;"><button id="bu2" style="background-color: #ffff00;"></button></div>
+    <div style="top: 90px; left:150px;"><button id="bu2" style="background-color: #ffff00;"></button></div>
     <div style="top: 95px;  display: none;"><input id="cbSlow" type="checkbox" name="cbSlow" value=""><label id="lbSlow" for="cbSlow"></label></div>
     <div style="top: 130px; display: none;"><span class="pos1" id="ipX0a"></span></div>
     <div style="top: 150px; display: none;"><input type="text" id="ipX0b"><span class="pos3" id="ipX0c"></span></div>
