--- a/CodeNotesInteractive/app/src/main/assets/InclinedPlane/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/InclinedPlane/index.html
@@ -7,9 +7,9 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css" type="text/css">
 <style type="text/css">
-div#total { width: 400px; height: 400px; }
+div#total { width: 650px; height: 400px; }
 div#canvas { width: 400px; height: 400px; }
-div#panel { top: 400px; width: 400px; height: 400px; } 
+div#panel { left: 400px; width: 250px; height: 400px; } 
 .pos1 { left: 10px; }
 .pos2 { left: 140px; }
 .pos3 { left: 220px; }
@@ -20,15 +20,13 @@ button { width: 230px; }
 .normal { color: #ff0000; }
 .force { color: #008000; }
 </style>
-<script src="inclinedplane_en.js"></script>
 <script src="inclinedplane.js"></script>
+<script src="inclinedplane_en.js"></script>
 <script src="page.js"></script>
-<meta name="description" content="HTML5 app: Inclined plane">
-<meta name="author" content="Walter Fendt">
-<meta name="keywords" content="app, physics, mechanics, inclined plane, normal force">
 </head>
 
 <body>
+
 <div id="total">
   <div id="canvas"><canvas id="cv" width=400 height=400>This browser doesn't support HTML5  canvas!</canvas></div>
   <div id="panel">
@@ -52,6 +50,7 @@ button { width: 230px; }
     <div style="top: 380px;"><span class="pos1" id="author"></span></div>
   </div>
 </div>
+
 
 </body>
 </html>
