--- a/CodeNotesInteractive/app/src/main/assets/OhmsLaw/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/OhmsLaw/index.html
@@ -7,10 +7,12 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css" type="text/css">
 <style type="text/css">
-div#total { width: 400px; height: 400px; }
+div#total { width: 650px; height: 400px; }
 div#canvas { width: 400px; height: 400px; }
-div#panel { top: 400px; width: 400px; height: 300px; }
-.pos1 { left: 10px; } 
+div#panel { left: 400px; width: 250px; height: 400px; } 
+.pos1 { left: 10px; }
+.pos2 { left: 140px; }
+.pos3 { left: 220px; }
 select { width: 180px; }
 button { width: 180px; }
 </style>
