--- a/CodeNotesInteractive/app/src/main/assets/InclinedPlane/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/InclinedPlane/index.html
@@ -30,8 +30,8 @@ button { width: 230px; }
 <div id="total">
   <div id="canvas"><canvas id="cv" width=400 height=400>This browser doesn't support HTML5  canvas!</canvas></div>
   <div id="panel">
-    <div style="top: 20px;"><button id="bu1" style="background-color: #00ffff;"></button></div>
-    <div style="top: 60px;"><button id="bu2" style="background-color: #ffff00;"></button></div>
+    <div style="top: 20px;"><button id="bu1" style="background-color: #d84315;"></button></div>
+    <div style="top: 60px;"><button id="bu2" style="background-color: #f9a825;"></button></div>
     <div style="top: 110px;"><input type="checkbox" id="cbSlow" name="cbSlow" value=""><label for="cbSlow" id="lbSlow"></label></div>
     <div style="top: 140px;"><input type="radio" id="rb1" name="bg" value=""><label for="rb1" id="lb1"></label></div>
     <div style="top: 165px;"><input type="radio" id="rb2" name="bg" value=""><label for="rb2" id="lb2"></label></div>
@@ -47,7 +47,7 @@ button { width: 230px; }
       <span class="pos3" id="op3c"></span></div>
     <div style="top: 345px;"><span class="pos1 force" id="op4a"></span><span id="op4b" class="pos2 force"></span>
       <span class="pos3 force" id="op4c"></span></div>
-    <div style="top: 380px;"><span class="pos1" id="author"></span></div>
+    <div style="top: 380px; visibility:hidden;"><span class="pos1" id="author"></span></div>
   </div>
 </div>
 
