--- a/CodeNotesInteractive/app/src/main/assets/OhmsLaw/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/OhmsLaw/index.html
@@ -33,12 +33,12 @@ button { width: 180px; }
     <div style="visibility: hidden; top: 0px;"><select id="selU"></select></div>
     <div style="visibility: hidden; top: 0px;"><span class="pos1" id="lbI"></span></div>
     <div style="visibility: hidden; top: 0px;"><select id="selI"></select></div>
-    <div style="top: 10px;"><button id="buR1" style="background-color: #ffff00;"></button></div>
-    <div style="top: 60px;"><button id="buR2" style="background-color: #ffff00;"></button></div>
-    <div style="top: 110px;"><button id="buU1" style="background-color: #00ffff;"></button></div>
-    <div style="top: 160px;"><button id="buU2" style="background-color: #00ffff;"></button></div>
-    <div style="top: 210px; color: #0000ff;"><span class="pos1" id="opU"></span></div>
-    <div style="top: 230px; color: #ff0000;"><span class="pos1" id="opI"></span></div>
+    <div style="top: 10px;"><button id="buR1" style="background-color: #FF8A65;"></button></div>
+    <div style="top: 80px;"><button id="buR2" style="background-color: #FF8A65;"></button></div>
+    <div style="top: 150px;"><button id="buU1" style="background-color: #4DD0E1;"></button></div>
+    <div style="top: 220px;"><button id="buU2" style="background-color: #4DD0E1;"></button></div>
+    <div style="top: 290px; color: #0000ff;"><span class="pos1" id="opU"></span></div>
+    <div style="top: 320px; color: #ff0000;"><span class="pos1" id="opI"></span></div>
     <div style="visibility: hidden;top: 360px;"><span class="pos1" id="author"></span></div>
     <div style="visibility: hidden; top: 380px;"><span class="pos1" id="translator"></span></div>
   </div>
