--- a/CodeNotesInteractive/app/src/main/assets/Pulley/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/Pulley/index.html
@@ -44,8 +44,8 @@ input[type="text"] { left: 40px; width: 100px; }
     <div style="top: 250px;"><span id="opb" class="pos1 f"></span></div>
     <div style="top: 290px;"><input type="radio" id="rb1" name="bg" value=""><label for="rb1" id="lb1"></label></div>
     <div style="top: 320px;"><input type="radio" id="rb2" name="bg" value=""><label for="rb2" id="lb2"></label></div>
-    <div style="top: 370px;"><span class="pos1" id="author"></span></div>
-    <div style="top: 390px;"><span class="pos1" id="translator"></span></div>
+    <div style="top: 370px; visibility:hidden"><span class="pos1" id="author"></span></div>
+    <div style="top: 390px; visibility: hidden"><span class="pos1" id="translator"></span></div>
   </div>
 </div>
 </body>
