--- a/CodeNotesInteractive/app/src/main/assets/Lever/index.html
+++ b/CodeNotesInteractive/app/src/main/assets/Lever/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <script src="lever.js"></script>
 <script src="lever_en.js"></script>
-<script src="page_phen.js"></script>
+<script src="page.js"></script>
 <meta name="description" content="HTML5 app: Lever principle">
 <meta name="author" content="Walter Fendt">
 <meta name="keywords" content="app, physics, mechanics, lever, torque, balance">
